fix tooltip readability

--- a/src/components/leaflet/gw2/tooltip.scss
+++ b/src/components/leaflet/gw2/tooltip.scss
@@ -1,8 +1,12 @@
+$ttt-shadow: #fff9;
+
 .leaflet-tooltip {
   font-family: 'Menomonia';
-  font-weight: bolder;
+  font-weight: bold;
   font-size: 1rem;
   line-height: 1.4;
+  text-shadow: 2px 0 $ttt-shadow, -2px 0 $ttt-shadow, 0 2px $ttt-shadow, 0 -2px $ttt-shadow,
+    1px 1px $ttt-shadow, -1px -1px $ttt-shadow, 1px -1px $ttt-shadow, -1px 1px $ttt-shadow;
 }
 
 .leaflet-tooltip-right {
